# unit_test_private_fn

./: CMakeLists copy.txt  CMakeLists.txt  README.md
include/: MyClass.hpp
src/: MyClass.cpp  main.cpp
test/: MyClassTest.cpp
